[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/Gameplay.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/Placeholders/Srodowa_noc_background.mp3" type="AudioStream" id=2]
[ext_resource path="res://scripts/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/Spatial.gd" type="Script" id=4]
[ext_resource path="res://bakedmap/env.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/Camera.gd" type="Script" id=6]
[ext_resource path="res://scripts/heart.tscn" type="PackedScene" id=7]
[ext_resource path="res://scripts/heath_bar.gd" type="Script" id=8]

[sub_resource type="BoxShape" id=19]
extents = Vector3( 87.9145, 7.02208, 8.46822 )

[node name="Main" type="Spatial"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0 )
script = ExtResource( 4 )

[node name="spawn_1" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, -710 )
visible = false

[node name="spawn_2" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 30, 5, -710 )
visible = false

[node name="spawn_3" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -30, 5, -710 )
visible = false

[node name="Spawn_Time" type="Timer" parent="."]

[node name="Player" parent="." instance=ExtResource( 3 )]
transform = Transform( 15, 0, 0, 0, 15, 0, 0, 0, 15, 0, 0, 35 )

[node name="Camera" type="Camera" parent="Player"]
transform = Transform( 0.666667, 0, 0, 0, 0.592907, 0.304804, 0, -0.304804, 0.592907, 0.116, 4.981, 3.05 )
current = true
near = 0.01
far = 486.4
script = ExtResource( 6 )

[node name="Table" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.7073, 0, -6.46366 )

[node name="CollisionShape" type="CollisionShape" parent="Table"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 15.0762, -1.48773 )
shape = SubResource( 19 )

[node name="env" parent="." instance=ExtResource( 5 )]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 91.6911 )

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -80.0

[node name="hud" parent="." instance=ExtResource( 1 )]

[node name="heath_bar" type="HBoxContainer" parent="."]
anchor_left = 0.280556
anchor_top = 0.0179687
anchor_right = 0.280556
anchor_bottom = 0.0179687
rect_scale = Vector2( 2, 2 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": true
}
heath_point = ExtResource( 7 )

[connection signal="health" from="." to="heath_bar" method="_on_Main_health"]
[connection signal="ready" from="." to="hud" method="_on_Main_ready"]
[connection signal="timeout" from="Spawn_Time" to="." method="_on_Spawn_Time_timeout"]
[connection signal="body_entered" from="Table" to="." method="_on_Area_body_entered"]
[connection signal="body_entered" from="Table" to="Player/Camera" method="_on_Area_body_entered"]
